1 depot avec du javacript

--- a/index.html
+++ b/index.html
@@ -16,16 +16,25 @@
 
   <div class="player">
     <div id="player1">Player 1</div>
+    <h2>C'est le tour du joueur 1</h2>
     <div id="player2">Player 2</div>
   </div>
 
+  <p id="firstDé">0</p>
+  <p id="secondDé">0</p>
+
+
   <div class="score">
-    <div id="score1">Votre score :</div>
-    <div>
-      <div id="launch">Lancer le dé</div>
-      <div id="hold">Sauver votre score!</div>
+    <div id="score1">Votre score :
+      <p id="globalScore1">0</p>
     </div>
-    <div id="score2">votre score :</div>
+    <div>
+      <button id="launch">Lancer le dé</button>
+      <button id="hold">Sauver votre score!</button>
+    </div>
+    <div id="score2">votre score :
+      <p id="globalScore2">0</p>
+    </div>
   </div>
 
   <script src="javascript.js"></script>
