--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 </head>
 <body>
   
-  <div class="replay">New Game</div>
+  <button id="replay">New Game</button>
+
+  <h2>C'est le tour du joueur 1</h2>
 
   <div class="player">
-    <div id="player1">Player 1</div>
-    <h2>C'est le tour du joueur 1</h2>
-    <div id="player2">Player 2</div>
+    <div id="player1">
+      <p id="firstPlayer">Player 1</p>
+      <p id="firstDé">0</p>
+    </div>
+    <div id="player2">
+      <p id="secondPlayer">Player 2</p>
+      <p id="secondDé">0</p>
+    </div>
   </div>
-
-  <p id="firstDé">0</p>
-  <p id="secondDé">0</p>
-
 
   <div class="score">
     <div id="score1">Votre score :
