jeux est fonctionnel

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 </head>
 <body>
   
-  <button id="replay">New Game</button>
+
+  <button id="replay">  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+  </svg>  New Game</button>
 
   <h2>C'est le tour du joueur 1</h2>
 
@@ -27,13 +31,30 @@
     </div>
   </div>
 
+  <div class="scene">
+    <div class="cube">
+      <div class="cube__face cube__face--1">1</div>
+      <div class="cube__face cube__face--6">6</div>
+      <div class="cube__face cube__face--2">2</div>
+      <div class="cube__face cube__face--5">5</div>
+      <div class="cube__face cube__face--3">3</div>
+      <div class="cube__face cube__face--4">4</div>
+    </div>
+  </div>
+
   <div class="score">
     <div id="score1">Votre score :
       <p id="globalScore1">0</p>
     </div>
     <div>
-      <button id="launch">Lancer le dé</button>
-      <button id="hold">Sauver votre score!</button>
+      <button id="launch"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-repeat" viewBox="0 0 16 16">
+        <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
+        <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
+      </svg>  Lancer le dé</button>
+      <button id="hold"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+        <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+        <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+      </svg>  Sauver votre score!</button>
     </div>
     <div id="score2">votre score :
       <p id="globalScore2">0</p>
